--- a/GestionDechets/src/main/resources/com/example/gestiondechets/addIntervention.fxml
+++ b/GestionDechets/src/main/resources/com/example/gestiondechets/addIntervention.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondechets.addInterventionController">
 
@@ -49,7 +53,7 @@
 
             <!-- Notes (TEXT - optionnel) -->
             <Label style="-fx-font-weight: bold;" text="Notes" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="280.0" />
-            <TextArea fx:id="notesArea" promptText="Notes additionnelles sur l'intervention..." AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="305.0" AnchorPane.bottomAnchor="20.0" />
+            <TextArea fx:id="notesArea" promptText="Notes additionnelles sur l'intervention..." AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="305.0" />
 
             <!-- Message d'erreur/succès -->
             <Label fx:id="messageLabel" style="-fx-font-size: 14px;" wrapText="true" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="270.0" />
@@ -59,8 +63,8 @@
 
     <!-- Boutons en bas -->
     <AnchorPane prefHeight="70.0" style="-fx-background-color: #ecf0f1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-        <Button fx:id="annulerBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #95a5a6; -fx-text-fill: white; -fx-font-weight: bold;" text="Annuler" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="20.0" />
-        <Button fx:id="validerBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #27ae60; -fx-text-fill: white; -fx-font-weight: bold;" text="Valider" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+        <Button fx:id="annulerBtn" mnemonicParsing="false" onAction="#handleAnnuler" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #95a5a6; -fx-text-fill: white; -fx-font-weight: bold;" text="Annuler" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="20.0" />
+        <Button fx:id="validerBtn" mnemonicParsing="false" onAction="#handleValider" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #27ae60; -fx-text-fill: white; -fx-font-weight: bold;" text="Valider" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
     </AnchorPane>
 
 </AnchorPane>
